--- a/src/app/index.html
+++ b/src/app/index.html
@@ -33,12 +33,11 @@
       </div>
       <nav class="collapse navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
-          <li ng-class="{active: routeIs('/createappointment')}" ng-show='user.isAuthenticated && !user.isAdmin && !user.isDoctor'><a
-              href="#/createappointment" translate>Create Appointment</a></li>
-          <li ng-class="{active: routeIs('/appointments')}" ng-show='user.isAuthenticated'><a href="#/appointments"
-              translate>Appointments</a></li>
           <li ng-class="{active: routeIs('/dashboard')}" ng-show='user.isAuthenticated'><a href="#/dashboard"
               translate>Dashboard</a></li>
+          <li ng-class="{active: routeIs('/createappointment')}"
+            ng-show='user.isAuthenticated && !user.isAdmin && !user.isDoctor'><a href="#/createappointment"
+              translate>Create Appointment</a></li>
         </ul>
         <ul class="nav navbar-right" ng-show="!user.isAuthenticated">
           <li ng-class="{ active: routeIs('/usersignin') }">
@@ -84,22 +83,21 @@
   <script src="/angular-ui-calendar/src/calendar.js"></script>
   <!-- endinject -->
   <!-- inject:js -->
-  <script src="/appointments/appointments.js"></script>
+  <script src="/appointments/appointment.js"></script>
   <script src="/appoints-client-templates.js"></script>
   <script src="/calendar.js"></script>
   <script src="/config.js"></script>
   <script src="/shared/directives.js"></script>
   <script src="/shared/flash.js"></script>
   <script src="/appointments/CreateAppointment.js"></script>
+  <script src="/auth/usersession.js"></script>
   <script src="/home/home.js"></script>
   <script src="/shared/appointsapi.js"></script>
-  <script src="/appointments/usersignup.js"></script>
-  <script src="/auth/usersession.js"></script>
   <script src="/appointments/dashboard.js"></script>
   <script src="/appointments/logindetails.js"></script>
   <script src="/appointments/profile.js"></script>
   <script src="/appointments/usersignin.js"></script>
-  <script src="/auth/authinterceptor.js"></script>
+  <script src="/appointments/usersignup.js"></script>
   <script src="/app.js"></script>
   <!-- endinject -->
 </body>
