--- a/src/app/appointments/logindetails.html
+++ b/src/app/appointments/logindetails.html
@@ -3,6 +3,7 @@
     <form name="form" ng-submit="vm.login()" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.oldPassword.$dirty && form.oldPassword.$error.required }">
             <label for="oldPassword">Old Password</label>
+            <span class="mandatoryField" style="color: red;">*</span>
             <input type="password" name="oldPassword" id="oldPassword" class="form-control" ng-model="oldPassword"
                 required />
             <span ng-show="form.oldPassword.$dirty && form.oldPassword.$error.required" class="help-block">Old password
@@ -10,6 +11,7 @@
         </div>
         <div class="form-group" ng-class="{ 'has-error': form.newPassword.$dirty && form.newPassword.$error.required }">
             <label for="newPassword">New Password</label>
+            <span class="mandatoryField" style="color: red;">*</span>
             <input type="password" name="newPassword" id="newPassword" class="form-control" ng-model="newPassword"
                 required />
             <span ng-show="form.newPassword.$dirty && form.newPassword.$error.required" class="help-block">New password
