--- a/src/app/appointments/usersignin.html
+++ b/src/app/appointments/usersignin.html
@@ -1,5 +1,5 @@
 <div ng-app="appoints" class="col-md-6 col-md-offset-3">
-    <h1 style="text-align: center;padding-bottom: 25px;"><b>Login</b></h1>
+    <h1 style="text-align: center;padding-bottom: 25px;">Login to <b>DOC Connect</b></h1>
     <form name="form" ng-submit="vm.login()" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
             <label for="username">Username</label>
