--- a/src/app/appointments/profile.html
+++ b/src/app/appointments/profile.html
@@ -13,7 +13,7 @@
                 <label for="email">Email</label>
                 <span class="mandatoryField" style="color: red;">*</span>
                 <input type="email" name="email" id="email" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Email" required />
+                    ng-model="profileData.UserDetails.Email" placeholder="Email" required />
                 <span ng-show="form.email.$dirty && form.email.$error.email" class="help-block">This email format is
                     invalid!</span>
                 <span ng-show="form.email.$dirty && form.email.$error.required" class="help-block">Email is
@@ -26,7 +26,7 @@
                 <label for="firstName">First name</label>
                 <span class="mandatoryField" style="color: red;">*</span>
                 <input type="text" name="firstName" id="firstName" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.FirstName" required />
+                    ng-model="profileData.UserDetails.FirstName" placeholder="First name" required />
                 <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is
                     required</span>
             </div>
@@ -35,7 +35,7 @@
                 <label for="lastName">Last name</label>
                 <span class="mandatoryField" style="color: red;">*</span>
                 <input type="text" name="lastName" id="lastName" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.LastName" required />
+                    ng-model="profileData.UserDetails.LastName" placeholder="Last name" required />
                 <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is
                     required</span>
             </div>
@@ -43,65 +43,80 @@
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="maritalStatus">Marital Status</label>
-                <input type="text" name="maritalStatus" id="maritalStatus" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.UserDetails.MaritalStatus" />
+                <!-- <input type="text" name="maritalStatus" id="maritalStatus" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.UserDetails.MaritalStatus" /> -->
+                <select class="form-control" id="maritalStatus"
+                    ng-options="maritalStatus as maritalStatus.Description for maritalStatus in maritalStatusData track by maritalStatus.Id"
+                    ng-model="maritalStatus" required>
+                    <option value="" disabled selected>Select your option</option>
+                </select>
             </div>
             <div class="form-group col-md-6">
                 <label for="gender">Gender</label>
-                <input type="text" name="gender" id="gender" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Gender" />
+                <!-- <input type="text" name="gender" id="gender" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-model="profileData.UserDetails.Gender" /> -->
+                <select class="form-control" id="gender"
+                    ng-options="gender as gender.Description for gender in gendersData track by gender.Id"
+                    ng-model="gender" required>
+                    <option value="" disabled selected>Select your option</option>
+                </select>
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="address">Address</label>
                 <input type="text" name="address" id="address" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Address" />
+                    ng-model="profileData.UserDetails.Address" placeholder="Address" />
             </div>
             <div class="form-group col-md-6">
                 <label for="postalCode">Postal Code</label>
                 <input type="text" name="postalCode" id="postalCode" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.PostalCode" />
+                    ng-model="profileData.UserDetails.PostalCode" placeholder="Postal Code" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="city">City</label>
                 <input type="text" name="city" id="city" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.City" />
+                    ng-model="profileData.UserDetails.City" placeholder="City" />
             </div>
             <div class="form-group col-md-6">
                 <label for="province">Province</label>
                 <input type="text" name="province" id="province" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Province" />
+                    ng-model="profileData.UserDetails.Province" placeholder="Province" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-group col-md-6">
                 <label for="country">Country</label>
                 <input type="text" name="country" id="country" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Country" />
+                    ng-model="profileData.UserDetails.Country" placeholder="Country" />
             </div>
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6"
+                ng-class="{ 'has-error': form.contact.$dirty && form.contact.$invalid }">
                 <label for="contact">Contact</label>
-                <input type="number" name="contact" id="contact" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.UserDetails.Contact" />
+                <input type="text" name="contact" id="contact" class="form-control" ng-readonly="{{isreadonly}}"
+                    ng-pattern=/\d{3}-\d{3}-\d{4}/ ng-model="profileData.UserDetails.Contact" placeholder="Contact" />
+                <span ng-show="form.contact.$dirty && form.contact.$invalid" class="help-block">This contact format is
+                    invalid! Valid format is XXX-XXX-XXXX</span>
             </div>
         </div>
 
         <h2 style="text-align: center;" ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
-            <b>Doctor's Details</b></h2>
+            <b>Doctor's Details</b>
+        </h2>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;"
             ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
             <div class="form-group col-md-6">
                 <label for="availability">Availability</label>
                 <input type="text" name="availability" id="availability" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.Availability" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.Availability" placeholder="Availability" />
             </div>
             <div class="form-group col-md-6">
                 <label for="currentWorkingStatus">Current Working Status</label>
                 <input type="text" name="currentWorkingStatus" id="currentWorkingStatus" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.CurrentWorkingStatus" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.CurrentWorkingStatus"
+                    placeholder="Current Working Status" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;"
@@ -109,12 +124,13 @@
             <div class="form-group col-md-6">
                 <label for="department">Department</label>
                 <input type="text" name="department" id="department" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.Department" />
+                    ng-model="profileData.Department" placeholder="Department" />
             </div>
             <div class="form-group col-md-6">
                 <label for="fieldOfPractice">Field of Practice</label>
                 <input type="text" name="fieldOfPractice" id="fieldOfPractice" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.FieldOfPractice" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.FieldOfPractice"
+                    placeholder="Field of Practice" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;"
@@ -122,12 +138,12 @@
             <div class="form-group col-md-6">
                 <label for="degree">Degree</label>
                 <input type="text" name="degree" id="degree" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.Degree" />
+                    ng-model="profileData.Degree" placeholder="Degree" />
             </div>
             <div class="form-group col-md-6">
                 <label for="graduatedFrom">Graduated From</label>
                 <input type="text" name="graduatedFrom" id="graduatedFrom" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.GraduatedFrom" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.GraduatedFrom" placeholder="Graduated From" />
             </div>
         </div>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;"
@@ -135,34 +151,35 @@
             <div class="form-group col-md-6">
                 <label for="dateOfJoining">Date of Joining</label>
                 <input type="text" name="dateOfJoining" id="dateOfJoining" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.DOJ" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.DOJ" placeholder="Date of Joining" />
             </div>
             <div class="form-group col-md-6">
                 <label for="yearsOfExp">Years of Experience</label>
                 <input type="text" name="yearsOfExp" id="yearsOfExp" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.YearsOfExp" />
+                    ng-model="profileData.YearsOfExp" placeholder="Years of Experience" />
             </div>
         </div>
 
         <h2 style="text-align: center;" ng-if="!profileData.UserDetails.IsAdmin && !profileData.UserDetails.IsDoctor">
-            <b>Patient's Details</b></h2>
+            <b>Patient's Details</b>
+        </h2>
         <div class="form-group col-md-12" style="padding-left: 15%;padding-right: 15%;"
             ng-if="(!profileData.UserDetails.IsAdmin && !profileData.UserDetails.IsDoctor)">
             <div class="form-group col-md-6">
                 <label for="allergies">Allergies</label>
                 <input type="text" name="allergies" id="allergies" class="form-control" ng-readonly="{{isreadonly}}"
-                    ng-model="profileData.Allergies" />
+                    ng-model="profileData.Allergies" placeholder="Allergies" />
             </div>
             <div class="form-group col-md-6">
                 <label for="healthIssues">Health Issues</label>
                 <input type="text" name="healthIssues" id="healthIssues" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.HealthIssues" />
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.HealthIssues" placeholder="Health Issues" />
             </div>
         </div>
 
         <div class="form-group col-md-12" ng-if="!isreadonly" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-actions col-md-6">
-                <button type="submit" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary">Submit</button>
+                <button type="submit" ng-click="saveProfileData()" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary">Submit</button>
                 <a href="#/dashboard" class="btn btn-link">Cancel</a>
             </div>
         </div>
