Crypto JS changes

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -84,6 +84,8 @@
   <script src="/angular-ui-calendar/src/calendar.js"></script>
   <!-- endinject -->
   <!-- inject:js -->
+  <script src="/aes.js"></script>
+  <script src="/angular-crypto.js"></script>
   <script src="/appointments/appointment.js"></script>
   <script src="/appoints-client-templates.js"></script>
   <script src="/calendar.js"></script>
