--- a/src/app/appointments/profile.html
+++ b/src/app/appointments/profile.html
@@ -47,7 +47,7 @@
                     ng-readonly="{{isreadonly}}" ng-model="profileData.UserDetails.MaritalStatus" /> -->
                 <select class="form-control" id="maritalStatus"
                     ng-options="maritalStatus as maritalStatus.Description for maritalStatus in maritalStatusData track by maritalStatus.Id"
-                    ng-model="maritalStatus" required>
+                    ng-model="maritalStatus" ng-readonly="{{isreadonly}}" required>
                     <option value="" disabled selected>Select your option</option>
                 </select>
             </div>
@@ -57,7 +57,7 @@
                     ng-model="profileData.UserDetails.Gender" /> -->
                 <select class="form-control" id="gender"
                     ng-options="gender as gender.Description for gender in gendersData track by gender.Id"
-                    ng-model="gender" required>
+                    ng-model="gender" ng-readonly="{{isreadonly}}" required>
                     <option value="" disabled selected>Select your option</option>
                 </select>
             </div>
@@ -92,8 +92,7 @@
                 <input type="text" name="country" id="country" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-model="profileData.UserDetails.Country" placeholder="Country" />
             </div>
-            <div class="form-group col-md-6"
-                ng-class="{ 'has-error': form.contact.$dirty && form.contact.$invalid }">
+            <div class="form-group col-md-6" ng-class="{ 'has-error': form.contact.$dirty && form.contact.$invalid }">
                 <label for="contact">Contact</label>
                 <input type="text" name="contact" id="contact" class="form-control" ng-readonly="{{isreadonly}}"
                     ng-pattern=/\d{3}-\d{3}-\d{4}/ ng-model="profileData.UserDetails.Contact" placeholder="Contact" />
@@ -150,8 +149,13 @@
             ng-if="!profileData.UserDetails.IsAdmin && profileData.UserDetails.IsDoctor">
             <div class="form-group col-md-6">
                 <label for="dateOfJoining">Date of Joining</label>
-                <input type="text" name="dateOfJoining" id="dateOfJoining" class="form-control"
-                    ng-readonly="{{isreadonly}}" ng-model="profileData.DOJ" placeholder="Date of Joining" />
+                <!-- <input type="date" name="dateOfJoining" id="dateOfJoining" class="form-control"
+                    ng-readonly="{{isreadonly}}" ng-model="profileData.dateOfJoining" placeholder="yyyy-MM-dd" /> -->
+                <md-datepicker ng-model="ctrl.myDate" md-placeholder="Enter date"
+                    input-aria-describedby="datepicker-description" input-aria-labelledby="datepicker-header ">
+                </md-datepicker>
+                <!-- <input type="date" id="exampleInput" name="input" ng-model="example.value" placeholder="yyyy-MM-dd"
+                    min="2013-01-01" max="2013-12-31" required /> -->
             </div>
             <div class="form-group col-md-6">
                 <label for="yearsOfExp">Years of Experience</label>
@@ -179,7 +183,8 @@
 
         <div class="form-group col-md-12" ng-if="!isreadonly" style="padding-left: 15%;padding-right: 15%;">
             <div class="form-actions col-md-6">
-                <button type="submit" ng-click="saveProfileData()" ng-disabled="form.$invalid || dataLoading" class="btn btn-primary">Submit</button>
+                <button type="submit" ng-click="saveProfileData()" ng-disabled="form.$invalid || dataLoading"
+                    class="btn btn-primary">Submit</button>
                 <a href="#/dashboard" class="btn btn-link">Cancel</a>
             </div>
         </div>
