--- a/src/app/index.html
+++ b/src/app/index.html
@@ -27,6 +27,10 @@
       cursor: pointer;
       text-align: center;
     }
+
+    .disable-anchor {
+      pointer-events: none;
+    }
   </style>
 </head>
 
